style.css
/*
Theme Name: iRibbon
Theme URI: http://www.cyberchimps.com/iribbon/
Author: CyberChimps
Author URI: http://www.cyberchimps.com/
Description: iRibbon is a fully Responsive Drag & Drop Starter WordPress Theme that adds amazing new functionality to your WordPress website. Featuring Twitter Bootstrap, and responsive touch friendly theme options that work on any device. Please use the <a href="http://cyberchimps.com/forum/">official support forum</a> (http://cyberchimps.com/forum/). Thank you.
Version: 2.0.32
Tags: brown, gray, light, two-columns, right-sidebar, fixed-layout, responsive-layout, custom-background, custom-colors, custom-menu, featured-images, post-formats, theme-options, sticky-post
License: GNU General Public License version 3
License URI: http://www.opensource.org/licenses/gpl-license.php GPL v3.0 (or later)
*/

/********************************************************************************************************************/
/******************************************** MAIN HTML STYLES ******************************************************/
/********************************************************************************************************************/
body {
  background: url("images/backgrounds/texture-background.jpg");
  color: #555555;
}

h1, h2, h3, h4, h5, h6 {
  margin-bottom: 15px;
  font-weight: 400;
}

a {
  color: #7fa6a6;
}

a:hover {
  color: #cd834a;
  text-decoration: none;
}

table .label {
  padding: 7px;
  background: none;
  text-shadow: none;
  line-height: normal;
}

tr {
  border-bottom: 1px solid #cccccc;
}

td {
  padding: 5px;
}

dt {
  margin-top: 5px;
  margin-bottom: 5px;
  margin-left: 26px;
  font-weight: bold;
}

dd {
  margin-bottom: 15px;
  margin-left: 26px;
}

ul, ol {
  margin: 0 0 10px 0;
}

ol, ul {
  margin-left: 21px;
  list-style-position: inside;
}

pre {
  -moz-border-radius: 0;
  border-radius: 0;
}

code {
  white-space: pre-wrap;
}

header {
  margin-top: 15px;
  margin-bottom: 15px;
}

.clear {
  clear: both;
}

.clear-right {
  clear: right;
}

.clear-left {
  clear: left;
}

.site-title, .box-widget-title, .entry-title, .widget-title, .recent_posts_post_title,
#callout_section_section, .carousel_caption, .cyberchimps-product-title, .respond-title, .comments-title, #portfolio_pro_section h2 {
  font-family: lobster, cursive;
}

/********************************************************************************************************************/
/******************************************** HEADER ****************************************************************/
/********************************************************************************************************************/

/*======================================= SOCIAL ==============================================*/

header #social .icons a {
  float: right;
  margin-left: 5px;
}

.icons {
  margin-top: 15px;
}

/*======================================= DETAILS =============================================*/

header#cc-header h2.site-title {
  margin-bottom: 5px;
}

header#cc-header h2.site-title a {
  color: #cd834a;
  text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
}

header#cc-header h2.site-description {
  margin: 0;
  font-size: 14px;
}

header#cc-header .contact_details {
  float: right;
}

header#cc-header .register {
  float: right;
}

header#cc-header .blog_description {
  float: right;
}

header#cc-header p {
  font-size: 1.2em;
}

/*======================================= SEARCH ===============================================*/

header #search #searchform {
  float: right;
}

/********************************************************************************************************************/
/******************************************** MENU ******************************************************************/
/********************************************************************************************************************/

#navigation {
  margin-bottom: 30px;
}

.main-navigation.navbar {
  margin-bottom: 0;
}

.main-navigation .navbar-inner {
  padding: 0px;
  -webkit-border-radius: 1px;
  border-radius: 1px;
}

.main-navigation .navbar-inner .container {
  position: relative;
  float: right;
  width: 100%;
}

.main-navigation .nav-collapse {
  padding: 0 20px;
}

.main-navigation .nav li a {
  font-style: italic;
  font-family: Georgia, sans-serif;
}

.main-navigation .nav li ul li ul {
  margin-left: 0;
  list-style: none;
}

.main-navigation .nav li.dropdown:hover ul.dropdown-menu {
  display: block;
  margin-top: 0;
}

.main-navigation .nav li ul li a:hover {
  background: none;
  color: #0088cc;
}

#navigation #searchform {
  margin-right: 15px;
}

.navbar .btn-navbar {
  margin-top: 13px;
  margin-bottom: 12px;
  background: #9e663d; /* Old browsers */
  background: -moz-linear-gradient(top, #cd834a 0%, #9e663d 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #cd834a), color-stop(100%, #9e663d)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, #cd834a 0%, #9e663d 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, #cd834a 0%, #9e663d 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, #cd834a 0%, #9e663d 100%); /* IE10+ */
  background: linear-gradient(to bottom, #cd834a 0%, #9e663d 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#CD834A', endColorstr='#9e663d', GradientType=0); /* IE6-9 */
}

.navbar .current-menu-ancestor.dropdown > a {
  color: #ffffff;
}

.navbar .nav li.dropdown > .dropdown-toggle .caret {
  margin-top: 10px;
  border-top-color: #000000;
  border-bottom-color: #000000;
}

.navbar .nav li.current-menu-ancestor.dropdown > .dropdown-toggle .caret, .navbar .nav li.dropdown.active > .dropdown-toggle .caret, .navbar .nav li.dropdown > a:hover .caret {
  border-top-color: #e9e3bb;
  border-bottom-color: #e9e3bb;
}
/* ... */

